# web3research-etl

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum
scripts/: backup_db.py  optimize_db.py
src/: clickhouse_eth.rs  graph.rs  helpers.rs  main.rs  mongo_eth.rs
src/ch_arb_nova/: check.rs  init.rs  schema.rs  sync.rs
src/ch_arb_one/: check.rs  init.rs  sync.rs
src/ch_btc/: check.rs  init.rs  schema.rs  sync.rs
src/ch_eth/: check.rs  init.rs  schema.rs  sync.rs
src/ch_polygon/: check.rs  init.rs  mod.rs  schema.rs  sync.rs
src/ch_solana/: init.rs  mod.rs  schema.rs
src/ch_tron/: init.rs  mod.rs  schema.rs
src/clickhouse_arb_nova/: check.rs  init.rs  sync.rs
src/clickhouse_arb_one/: check.rs  init.rs  mod.rs  sync.rs
src/clickhouse_btc/: check.rs  init.rs  sync.rs
src/clickhouse_eth/: check.rs  init.rs  init_http.rs  init_ws.rs  main.rs  mod.rs  sync.rs  sync_http.rs  sync_ws.rs
src/clickhouse_polygon/: check.rs  init.rs  sync.rs
src/clickhouse_scheme/: arbitrum.rs  bitcoin.rs  ethereum.rs  mod.rs  polygon.rs  tron.rs
src/clickhouse_solana/: mod.rs
src/clickhouse_tron/: ddl.rs  init.rs  mod.rs
src/graph_scheme/: ethereum.rs  mod.rs
