[package]
name = "kylinkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
pretty_env_logger = "^0.5.0"
num_cpus = "^1.16.0"
env_logger = "^0.10.0"
log = "^0.4.19"
tokio-retry = "0.3.0"
klickhouse = "^0.9.0"
serde_json = "^1.0.103"
url = "^2.4.0"
serde_variant = "^0.1.2"

[dependencies.ethers]
version = "^2.0.7"
features = ["ws"]

[dependencies.clap]
version = "^4.3.10"
features = ["derive"]

[dependencies.tokio]
version = "^1.29.1"
features = ["rt", "macros", "rt-multi-thread", "time"]

[dependencies.serde]
version = "^1.0.165"
features = ["derive"]
